--- a/src/components/Common/ButtonLink/ButtonLink.module.scss
+++ b/src/components/Common/ButtonLink/ButtonLink.module.scss
@@ -3,10 +3,10 @@
 .button_link {
   min-width: 140px;
   width: fit-content !important;
-  padding: 0 $gap-small;
+  padding: $gap-medium $gap-medium;
   height: 40px;
   white-space: nowrap;
-  font-size: $fs-small;
+  font-size: $fs-regular;
 
   font-weight: 700;
   border-radius: $border-radius-button;
@@ -21,14 +21,14 @@
   }
   &.tertiary {
     background: $secondary-accent;
-    color: $primary-background;
+    color: $primary-text;
   }
   &.white {
     background: $primary-background;
     color: $primary-text;
   }
   &.large {
-    width: 160px;
+    min-width: 160px;
   }
 
   &.full_width {
