--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,16 +1,18 @@
 // =============================================
 // Colors
 // =============================================
-$primary-text: #212a33; // Primary text color
-$secondary-text: #444444; // Secondary text color
+$primary-text: #040a31; // Primary text color
+$secondary-text: #34353d; // Secondary text color
 $secondary-header: #484f56; // Secondary header color
-$primary-background: #ffffff; // Primary background color
-$secondary-background: #eaeaea; // Secondary background color
-$primary-accent: #276aed; // Primary accent color
-$secondary-accent: #973000; // Secondary accent color
+$primary-background: #f8f8f8; // Primary background color
+$secondary-background: #c8ebfc; // Secondary background color
+$white: #fff;
+$primary-accent: #0066db; // Primary accent color
+$secondary-accent: #ecbe36; // Secondary accent color
 
 $border-color: #d9d9d9; // Default border color
 $secondary-border-color: #575757; // Secondary border color
+$placeholder-text: #757575;
 
 // =============================================
 // Typography
@@ -63,7 +65,7 @@ $breakpoint-xl: 1200px; // Extra large breakpoint
 // Borders
 // =============================================
 $border-radius: 12px; // Default border radius
-$border-radius-button: 12px; // Button border radius
+$border-radius-button: 16px; // Button border radius
 $border-width: 1px; // Default border width
 
 // =============================================
