--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -89,6 +89,7 @@ $border-radius-card: 15px; // Card border radius
 $box-shadow-card: rgba(0, 0, 0, 0.16) 0px 3px 6px,
   rgba(0, 0, 0, 0.23) 0px 3px 6px; // Card box shadow
 $fs-card-text: $fs-small; // Card text font size
+$card-max-width: 450px;
 
 // =============================================
 // Icons
