--- a/src/components/Common/ButtonLink/ButtonLink.module.scss
+++ b/src/components/Common/ButtonLink/ButtonLink.module.scss
@@ -12,8 +12,8 @@
   border-radius: $border-radius-button;
 
   &.primary {
-    background: $primary-accent;
-    color: $primary-background;
+    background: $secondary-accent;
+    color: $primary-text;
   }
   &.secondary {
     background: $primary-text;
