--- a/src/components/Pages/Home/OurWork/OurWork.module.scss
+++ b/src/components/Pages/Home/OurWork/OurWork.module.scss
@@ -1,1 +1,47 @@
 @use '../../../../styles/vars' as *;
+
+.our_work {
+  background: $primary-text;
+  color: $primary-background;
+  .content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: $gap-xl;
+    .images_container {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: $gap-large;
+      .image {
+        position: relative;
+        width: 100%;
+        border-radius: $border-radius;
+        overflow: hidden;
+        h2 {
+          position: absolute;
+          top: 0;
+          display: flex;
+          padding-left: $gap-small;
+          align-items: center;
+          font-size: $fs-xlarge;
+          width: 100%;
+          height: 70px;
+          color: $white;
+          background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.65) 0%,
+            rgba(0, 0, 0, 0.45) 75%,
+            rgba(0, 0, 0, 0) 100%
+          );
+        }
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: contain;
+        }
+      }
+    }
+  }
+}
