feat(home|OurWork): add desktop responsiveness for OurWork Component

--- a/src/components/Pages/Home/OurWork/OurWork.module.scss
+++ b/src/components/Pages/Home/OurWork/OurWork.module.scss
@@ -8,6 +8,7 @@
     align-items: center;
     flex-direction: column;
     gap: $gap-xl;
+    margin: 0 auto;
     .images_container {
       display: flex;
       flex-wrap: wrap;
