--- a/src/components/Common/Testimonials/Testimonials.module.scss
+++ b/src/components/Common/Testimonials/Testimonials.module.scss
@@ -16,7 +16,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       gap: $gap-large;
       width: 100%;
       margin: $gap-large auto;
@@ -25,6 +25,7 @@
         display: flex;
         flex-direction: column;
         gap: $gap-medium;
+        max-width: 325px;
 
         .icon_container {
           .icon {
