--- a/src/components/Common/CallToAction/CallToAction.module.scss
+++ b/src/components/Common/CallToAction/CallToAction.module.scss
@@ -1,1 +1,53 @@
 @use '../../../styles/vars' as *;
+
+.call_to_action {
+  .content {
+    position: relative;
+    background: $primary-accent;
+    padding: 0;
+    margin: 0;
+
+    .text_section {
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      gap: $gap-large;
+      margin-top: $gap-large;
+      padding: 0 $gap-medium;
+      h1 {
+        font-size: $fs-large;
+        text-align: center;
+      }
+      p {
+        font-size: $fs-small;
+        font-weight: 600;
+      }
+      h1,
+      p {
+        color: $primary-background;
+      }
+    }
+    .image {
+      position: relative;
+      margin: 0 auto;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      height: 250px;
+      overflow: hidden;
+      border-radius: $border-radius;
+
+      img {
+        position: absolute;
+        bottom: 0;
+        margin-top: 50%;
+        width: 130%;
+        height: 200px;
+        object-fit: cover;
+        object-position: top;
+      }
+    }
+  }
+}
