feat(about): add AboutTheOwner for mobile and add gradient background option for CallToAction

--- a/src/components/Common/CallToAction/CallToAction.module.scss
+++ b/src/components/Common/CallToAction/CallToAction.module.scss
@@ -87,4 +87,13 @@
       }
     }
   }
+
+  &.gradient {
+    padding-top: $gap-2xl;
+    background: linear-gradient(
+      to bottom,
+      $primary-accent,
+      $primary-background
+    );
+  }
 }
