feat(Services): setup boilerplate for Services page and create responsive comonent Hero

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Pages/Home/Hero';
 import '../styles/global.scss';
+import Hero from '../components/Pages/Services/Hero'
+import ServicesList from '../components/Pages/Services/ServicesList';
+import WhyChooseUs from '../components/Pages/Services/WhyChooseUs';
+import CallToAction from '../components/Common/CallToAction';
 
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -10,5 +13,7 @@ import '../styles/global.scss';
 
 <Layout>
   <Hero />
-  
+  <ServicesList />
+  <WhyChooseUs />
+  <CallToAction background="gradient" />
 </Layout>
