--- a/src/components/Pages/Services/ServicesList/ServicesList.module.scss
+++ b/src/components/Pages/Services/ServicesList/ServicesList.module.scss
@@ -1,1 +1,46 @@
 @use '../../../../styles/vars' as *;
+
+.services_list {
+  .content {
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      gap: $gap-xl;
+      .service {
+        .image {
+          width: 100%;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            border-radius: $border-radius;
+          }
+        }
+
+        .text_section {
+          display: flex;
+          flex-direction: column;
+          gap: $gap-medium;
+          align-items: center;
+
+          margin-top: $gap-large;
+          h2 {
+            font-size: $fs-medium;
+            text-align: center;
+          }
+          .divider {
+            height: 2px;
+            border-radius: 10px;
+            background: $primary-accent;
+            // margin: $gap-medium 0;
+            width: 100%;
+          }
+          p {
+            margin-bottom: $gap-regular;
+            font-size: $fs-regular;
+          }
+        }
+      }
+    }
+  }
+}
