--- a/src/components/Pages/Services/ServicesList/ServicesList.module.scss
+++ b/src/components/Pages/Services/ServicesList/ServicesList.module.scss
@@ -2,18 +2,24 @@
 
 .services_list {
   .content {
+    box-sizing: border-box;
+    max-width: 100%;
     .services {
       display: flex;
       flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
       gap: $gap-xl;
       .service {
+        box-sizing: border-box;
         .image {
           width: 100%;
+          border-radius: $border-radius;
+          overflow: hidden;
           img {
             width: 100%;
             height: 100%;
             object-fit: contain;
-            border-radius: $border-radius;
           }
         }
 
@@ -38,6 +44,40 @@
           p {
             margin-bottom: $gap-regular;
             font-size: $fs-regular;
+          }
+        }
+      }
+    }
+  }
+
+  @media (min-width: 800px) {
+    .content {
+      .services {
+        > :nth-child(even) {
+          flex-direction: row-reverse;
+        }
+        .service {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          gap: $gap-large;
+          max-width: 100%;
+          padding: $gap-large;
+
+          .image {
+            max-width: 50%;
+            width: 450px;
+            height: 100%;
+          }
+          .text_section {
+            width: 50%;
+            align-items: flex-start;
+            padding: 0;
+            margin: 0;
+            h2,
+            p {
+              text-align: left;
+            }
           }
         }
       }
