feat(ServicesList): update padding for better layout

--- a/src/components/Pages/Services/ServicesList/ServicesList.module.scss
+++ b/src/components/Pages/Services/ServicesList/ServicesList.module.scss
@@ -4,6 +4,7 @@
   .content {
     box-sizing: border-box;
     max-width: 100%;
+    margin-bottom: $gap-2xl;
     .services {
       display: flex;
       flex-wrap: wrap;
