--- a/src/components/Pages/Pricing/PricingGuide/PricingGuide.module.scss
+++ b/src/components/Pages/Pricing/PricingGuide/PricingGuide.module.scss
@@ -5,11 +5,14 @@
   .content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: $gap-large;
+    margin: 0 auto;
+
     .image {
       height: 100%;
       width: 100%;
-      max-width: 450px;
+      max-width: 480px;
 
       img {
         height: 100%;
@@ -40,6 +43,21 @@
       }
       p {
         margin-top: $gap-large;
+      }
+    }
+  }
+
+  @media (min-width: 800px) {
+    .content {
+      flex-direction: row;
+      justify-content: space-between;
+      margin: 0;
+      width: 100%;
+      .image {
+        width: 50%;
+      }
+      .text_section {
+        width: 50%;
       }
     }
   }
