feat(contact): begin creating contact page ContactForm component

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
+import ContactForm from '../components/Pages/Contact/ContactForm';
 import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Pages/Home/Hero';
 import '../styles/global.scss';
 
 
@@ -9,6 +9,5 @@ import '../styles/global.scss';
 ---
 
 <Layout>
-  <Hero />
-  
+  <ContactForm />
 </Layout>
