--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
-import ContactForm from '../components/Pages/Contact/ContactForm';
+import Testimonials from '../components/Common/Testimonials';
+import InfoAndForm from '../components/Pages/Contact/InfoAndForm';
 import Layout from '../layouts/Layout.astro';
 import '../styles/global.scss';
 
@@ -9,5 +10,6 @@ import '../styles/global.scss';
 ---
 
 <Layout>
-  <ContactForm />
+  <InfoAndForm />
+  <Testimonials />
 </Layout>
