--- a/src/components/Pages/Contact/InfoAndForm/InfoAndForm.module.scss
+++ b/src/components/Pages/Contact/InfoAndForm/InfoAndForm.module.scss
@@ -58,6 +58,21 @@
       }
     }
   }
+  @media (min-width: 800px) {
+    .content {
+      margin-top: $gap-large;
+      position: relative;
+      flex-direction: row;
+      width: 100%;
+
+      .form_content {
+        width: 50%;
+      }
+      .map {
+        width: 50%;
+      }
+    }
+  }
 }
 
 .contact_form {
