feat(ProjectList): add boilerplate components to Projects page

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,9 @@
 ---
+import CallToAction from '../components/Common/CallToAction';
+import Testimonials from '../components/Common/Testimonials';
+import Hero from '../components/Pages/Projects/Hero';
+import ProjectsList from '../components/Pages/Projects/ProjectsList';
 import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Pages/Home/Hero';
 import '../styles/global.scss';
 
 
@@ -10,5 +13,7 @@ import '../styles/global.scss';
 
 <Layout>
   <Hero />
-  
+  <ProjectsList />
+  <Testimonials />
+  <CallToAction />
 </Layout>
