--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import { projects } from '../../assets/projects';
+import { projects } from '../../assets/data/projects';
 
 export async function getStaticPaths() {
   return projects.map((project) => ({
