--- a/src/components/Pages/ProjectPage/ProjectContent/ProjectContent.module.scss
+++ b/src/components/Pages/ProjectPage/ProjectContent/ProjectContent.module.scss
@@ -4,6 +4,9 @@
   .content {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
+
     gap: $gap-large;
     .image {
       max-width: 550px;
@@ -19,10 +22,13 @@
       }
     }
     .text_section {
+      width: 100%;
+      max-width: 550px;
       h1 {
         color: $primary-accent;
         font-size: $fs-large;
         margin-bottom: $gap-medium;
+        text-align: left;
       }
       .location {
         display: flex;
@@ -44,6 +50,25 @@
           text-align: left;
           color: $primary-text;
           font-weight: 400;
+          font-size: $fs-regular;
+        }
+      }
+    }
+  }
+
+  @media (min-width: 800px) {
+    .content {
+      flex-direction: row-reverse;
+      align-items: flex-start;
+      gap: $gap-medium;
+      .image {
+        width: 50%;
+      }
+      .text_section {
+        width: 50%;
+
+        h1 {
+          font-size: $fs-xlarge;
         }
       }
     }
