fix(React): add keys to mapped through elements

--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -105,6 +105,11 @@
         color: $secondary-text;
       }
     }
+    .text {
+      a {
+        text-decoration: underline;
+      }
+    }
     @media (min-width: $breakpoint-md) {
       flex-direction: row;
       justify-content: space-between;
