fix(SEO & About): add page titles and fix styling layout issue with About page text

--- a/src/components/Common/ValuesList/ValuesList.module.scss
+++ b/src/components/Common/ValuesList/ValuesList.module.scss
@@ -57,7 +57,7 @@
     border: 0;
   }
   &.left {
-    justify-content: center;
+    justify-content: flex-start;
     width: fit-content;
     padding: 0;
   }
