--- a/src/components/Pages/About/OurValues/OurValues.module.scss
+++ b/src/components/Pages/About/OurValues/OurValues.module.scss
@@ -71,7 +71,9 @@
           display: block;
         }
         .paragraphs {
+          width: fit-content;
           margin-bottom: $gap-xl;
+
           p {
             text-align: left;
           }
