--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import CallToAction from '../components/Common/CallToAction';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout title="About | Bo Pro Power Washing">
   <OurValues />
   <AboutTheOwner />
   <CallToAction background="gradient" />
