--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,7 +9,7 @@ import '../styles/global.scss';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout title="Contact | Bo Pro Power Washing">
   <InfoAndForm client:load />
   <Testimonials />
 </Layout>
