--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -11,7 +11,7 @@ import PricingGuide from '../components/Pages/Pricing/PricingGuide';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout title="Pricing | Bo Pro Power Washing">
   <Hero />
   <PricingGuide />
   <Testimonials />
