--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -20,7 +20,7 @@ if (!project) {
 }
 ---
 
-<Layout>
+<Layout title={`${project.title} | Bo Pro Power Washing`}>
   <ProjectContent project={project} />
   <ProjectImages project={project} />
   <CallToAction />
