--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -11,7 +11,7 @@ import ServicesList from '../components/Pages/Services/ServicesList';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout title="Services | Bo Pro Power Washing">
   <Hero />
   <ServicesList />
   <WhyChooseUs />
