--- a/src/pages/terms-of-service.astro
+++ b/src/pages/terms-of-service.astro
@@ -8,7 +8,7 @@ import '../styles/global.scss';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout title="Terms Of Service | Bo Pro Power Washing">
   <!-- <Hero /> -->
   
 </Layout>
