--- a/src/components/Pages/Home/Hero/Hero.module.scss
+++ b/src/components/Pages/Home/Hero/Hero.module.scss
@@ -8,6 +8,9 @@
     display: flex;
     flex-direction: column;
     gap: $gap-large;
+    p {
+      margin: 0 auto;
+    }
     .buttons {
       display: flex;
       gap: $gap-large;
@@ -15,6 +18,7 @@
     }
   }
   .image {
+    position: relative;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -25,6 +29,7 @@
 
     z-index: -1;
     img {
+      position: absolute;
       height: 100%;
       width: 100%;
       object-fit: cover;
