feat(og:image): update og image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const siteName = "Bo Pro Power Washing"
 
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content={Astro.url.href} />
-		<meta property="og:image" content="/images/logo.webp" />
+		<meta property="og:image" content="/images/og_image.webp" />
 		<meta property="og:site_name" content={siteName} />
 
 		<link rel="canonical" href={Astro.url.href} />
