--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,7 @@ const siteName = "Bo Pro Power Washing"
 		<meta property="og:site_name" content={siteName} />
 
 		<link rel="canonical" href={Astro.url.href} />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
